manifests/heimdall/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  containers:
  - name: heimdall
    image: lscr.io/linuxserver/heimdall:latest
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - name: data
      mountPath: /config
    ports:
    - containerPort: 80
      name: http
    - containerPort: 443
      name: http
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: heimdall-storage
