manifests/heimdall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  type: ClusterIP
  selector:
    app: heimdall
